# livana_backend_v2

./: .env  .gitattributes  .gitignore  API_DOCS.md  Cargo.toml  Dockerfile  Expo_API_Documentation.md  FRONTEND_API_DOCS.md  GOOGLE_AUTH_CHAT_API.md  IMPLEMENTATION_SUMMARY.md  LIVANA_BACKEND_WRITEUP.md  Language_API_Documentation.md  PROPERTY_SEARCH_CARECREW_API.md  Profile_API_Tests.postman_collection.json  build_out.txt  check_out.txt  check_output.txt  check_output_2.txt  check_output_v2.txt  check_output_v3.txt  check_output_v4.txt  check_output_v5.txt  check_output_v6.txt  check_output_v8.txt  clippy_output.txt  compile_error.txt  constraints.txt  custom_test.js  desktop.ini  error.txt  error_log.txt  et --hard HEAD@{1}  example.env  fix.ps1  fix_checksums.py  gen_test_jwt.rs  generate_jwt.js  google_login_demo.html  kyc_check.txt  migration_jobs_out.txt  (+34 more)
.sqlx/: query-03a416569672f0e35cc2cd1d2ea1b858f2921a037730355a55c11522cfa01334.json  query-1fd57a42bc508e31b79f8e86a40da9474cb1168b7324b208047271592e7e6c13.json  query-220fa4bcb46a8b125f14389e8216d9ef3e4442326b6af1c550d5802f6f3cb189.json  query-222cfb6211885fc64150453139f198c35d08fb13e204e778764fe74e0fa209cd.json  query-2cc613efc9b2119d4bc4bed2818a52ae870eeff0f44bf01c308f7e6775763388.json  query-3d3718ceef808ad1a72f561de1bfb8d695822e7e2ab0c575a916d87b2e4df6c6.json  query-4030b6e4cd827172b928af1f5521ab52e08a224183bc0ad916f9d5ac634c9da3.json  query-448e681064a706d912d182f3f7af444afd14daa00f9e85e726d278ffd9724553.json  query-4612eba5d04269772dcb5fc4d9f289ed6b621cee38f99b341e485b70eb89baf6.json  query-485ff8639ec55318eed877ff7f3391ccb065fd6a5c37c5c276f6e909ae867896.json  query-48c10a97170beec6a11baffb91bf4b0a72cfc63ec4b050ad2da990a81d00b0ee.json  query-4e6f5ec3b7918c84d45f4e862c1132af816483addc3e56e173a49c07aa99ed10.json  query-50736442eb3365c6105ae3034fef177e9d9d33d844090b4d9257b703fd053fab.json  query-5adf2af012adfd0de42a65fee8d4142f3e01536438781d80732c9bb9d24faeb6.json  query-62699a0a632cce86b089bcb53a0be55111ba641c676156e6b261b0c3ac1882db.json  query-63e4fe5efa07c60e7d94d60b22139918b7894c07fae0ff72adedf5cf5ed3d7b4.json  query-75c2fde16db75b3b1decd997ed4f088077fa798cd66d3474448da9275c436c98.json  query-90227d4c78e3eb1f4e116ea8b7b33e3ead243165a6d12b9502588dd22d4118e9.json  query-9513bad163b21932ee9c052a575fc53491bc92d9d4581e72b645cfcc5df3b8f4.json  query-96e77df834a226b1381d6f0d8615e9b12c3599192138e9bb06f268ad92f29fae.json  query-aa23c70febf6036bae74ec90e5949db2d7b2e98452c2075ecce17fa7ca516246.json  query-b03c252efa8fd4a76376c5b7095cadeceb626abe232f130a46dfe7294cef9cf8.json  query-b5f367b24ebee60fc82d53175d209c495327e16cdc3571727d1c3f0b39f60c52.json  query-ba9c830686360b9f0ad1a15308c7a7485ac64e744a8471d96d74c1d9297c43ec.json  query-c137821f3d65ad9331778494bc3dcae6d80abadf57303acfef891353017a9194.json  query-c81a52c43a4aaa73dbcec3608422b427463ab9d281b9994687c5f25dd3bf29db.json  query-dba870769175d0f8c8eb7e281c99172461083e540e21b89a0cc514135610872a.json  query-df17b282ae449459669b1c4600fa066c375837ac7f2d28a4075b9c4a9a06a877.json  query-e54e472528424a7f30efac211b7d2175904e34e55448251e6dcdd91faefb74f7.json  query-e57577945464eb3a78fb6155838922810a6abe62fceaba4aacf3d059dd9fb735.json  query-e94b654f2ad9326b9341dc513c553e43dcf2de7618a47cce4584e706bf01cdd6.json  query-ed54d3a4670f257821c51cf111c8350905713809a7a6226a5ea8aa892c4b57c4.json  query-f568f48974f06744387654043269ad0736c047cb3fee0a6504628fdfd352edaf.json  query-f9f38b520d8a36b7337a7aab91b108237a66a02b006ebcbbe3a4f72ab7ead5f1.json
docs/: API_DOCS.md  Admin User Management API Documentation.md  Admin_Action_Logs_API.md  Admin_Properties_API_Documentation.md  Associate Onboarding.docx  (+48 more)
(+229 files in other folders)
