[package]
name = "livana-backend-v2"
version = "0.1.0"
edition = "2024"
default-run = "livana-backend-v2"

[dependencies]
# Web framework
axum = "0.8.6"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
axum-extra = { version = "0.10.0", features = ["typed-header", "multipart"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (SQLx)
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "json"
] }

# Auth & Security
jsonwebtoken = "9.0"
bcrypt = "0.15"
argon2 = "0.5.3"
password-hash = "0.4"
rand = "0.8"
rand_core = "0.6"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1"

# Logging & Tracing
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

# OpenAPI / Swagger
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5.0", features = ["axum"] }

# AWS (OTP via SNS + SES)
aws-config = "1"
aws-sdk-sns = "1"
aws-sdk-sesv2 = "1"
aws-sdk-chime = "1"
aws-sdk-chimesdkidentity = "1"
aws-sdk-chimesdkmessaging = "1"
aws-sdk-s3 = "1"

# HTTP Client (Google OAuth token verification)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# KYC Processing
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
mime = "0.3"
rusty-tesseract = "1.1"
async-trait = "0.1"
mime_guess = "2.0"
image = "0.25"
validator = { version = "0.20.0", features = ["derive"] }
